<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="really_send_title">Send Message?</string>
    <string name="really_send_part1">"Really send this information to "</string>
    <string name="database_cleanup">Database Cleanup</string>
    <string name="delete_unused_message">To permanently delete unused sample data, choose a time frame from the list below.\n\nOnly sample data provided with ChipsList will be deleted; data you have entered will be kept regardless of when it was last used.</string>
    <string name="delete_unused_leader">Delete sample data that has </string>
    <string name="never">never been used</string>
    <string name="enter_description">Enter Description</string>
    <string name="delete_unused_1mo">not been used within 1 month</string>
    <string name="delete_unused_3mo">not been used within 3 months</string>
    <string name="delete_unused_6mo">not been used within 6 months</string>
    <string name="perm_del">Permanently delete checked items?</string>
    <string name="microphone_icon">Microphone Icon.  Press to dictate information.</string>
    <string name="no_data_for_price_comparison">No Data For Price Comparison</string>
    <string name="duplicate_title">Error - Duplicate Item Name</string>
    <string name="duplicate_msg">An item with this name already exists.  Please revise the item name.</string>
    <string name="blank_item_title">Blank Item Name</string>
    <string name="blank_item_msg">Blank item names are not permitted.  Please revise the item name.</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_msg">Really exit without saving changes?</string>
    <string name="dialog_remove_checked_title">Remove Checked Items?</string>
    <string name="dialog_remove_all_title">Remove All Items?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share via SMS</string>
    <string name="share_list">Share List via SMS</string>
    <string name="share_item">Share Item via SMS</string>
    <string name="app_name">ChipsList</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="disp_url">cottagecoders.com</string>
    <string name="url">http://cottagecoders.com</string>
    <string name="select_store">Select Store</string>
    <string name="find_add_title">Find Or Add New Item</string>
    <string name="enter_store_name">Enter Store Name</string>
    <string name="cant_delete_blank_department">You Can\'t Delete the \"Blank\" Department.</string>
    <string name="item_name">Name:</string>
    <string name="location">Location: </string>
    <string name="size">Size: </string>
    <string name="price">Price: </string>
    <string name="quantity">Quantity:</string>
    <string name="is_taxed">Taxed?</string>
    <string name="no_tax_rate">does\nnot have a tax rate.</string>
    <string name="sequence">Sequence:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="m">M</string>
    <string name="location_hint">Location of this item in the store.</string>
    <string name="size_hint">Size of the product - eg. 16 oz, 1 box</string>
    <string name="price_hint">Enter the price of the item.</string>
    <string name="list"> list</string>
    <string name="delete">Delete</string>
    <string name="shopping_list_for">Shopping List For </string>
    <string name="move_checked">Move Checked</string>
    <string name="clear_checked">Uncheck All Items</string>
    <string name="show_checked">Show Checked</string>
    <string name="add_new_item">Add New Item</string>
    <string name="store_name">Store Name</string>
    <string name="deletecompareshare">Delete, Compare or Share</string>
    <string name="deleteshopping">Delete from Shopping List</string>
    <string name="pricecompare">Compare prices in stores</string>
    <string name="add_store">Add New Store</string>
    <string name="del_store">Delete Store</string>
    <string name="remove_store">Remove or Update Store</string>
    <string name="add_item">Add Item To List</string>
    <string name="remove_item">Remove Item</string>
    <string name="update_item">Update Item</string>
    <string name="update">Update</string>
    <string name="no_ads">Remove Ads</string>
    <string name="long_ads_string">To remove ads from ChipsList, click here.</string>
    <string name="add_a_store">Add A Store:</string>
    <string name="remove_checked">Remove Checked Items</string>
    <string name="delete_checked">Delete Checked</string>
    <string name="remove_all">Remove All Items</string>
    <string name="set_sort_order">Set Sort Order</string>
    <string name="update_department_sort">Set Dept. Order</string>
    <string name="voice_prompt_location">Say the item\'s location (eg. Bakery, Produce)</string>
    <string name="voice_prompt_size">Say the item\'s size, such as 1 bag or package)</string>
    <string name="voice_prompt_price">Say the item\'s price: (eg \"three point seven nine\")</string>
    <string name="voice_prompt_item">Say the item\'s name</string>
    <string name="voice_prompt_quantity">Say the item\'s quantity</string>
    <string name="voice_prompt_sequence">Say the item\'s sequence number</string>
    <string name="select_sort">Select Sort Order</string>
    <string name="sort_alpha">Sort Alphabetically</string>
    <string name="sort_location">Sort By Location</string>
    <string name="sort_sequence">Sort By Sequence #</string>
    <string name="store_tax">Tax Rate %\n (eg. 8.25)</string>
    <string name="summary">Summary</string>
    <string name="scan">Scan</string>
    <string name="summary_trip">Shopping Trip Summary</string>
    <string name="summary_num_items">Number of items on list:</string>
    <string name="summary_items_with_prices_and_qty">Items with prices and qty: </string>
    <string name="summary_checked_items">Checked Item Count:</string>
    <string name="summary_price">Price:</string>
    <string name="summary_tax">Tax:</string>
    <string name="summary_total">Total:</string>
    <string name="really_delete">Delete?</string>
    <string name="really_delete2">Really Delete</string>
    <string name="really_delete3">Really Delete Sample Data?</string>
    <string name="confirmdelete">Confirm Delete</string>
    <string name="tax_rate_fail_message">Enter tax rate as a number with an optional decimal. (eg. 6 or 8.25) </string>
    <string name="tax_rate_fail">Invalid Tax % (eg. 6 or 8.25)</string>
    <string name="update_fail">Update Error</string>
    <string name="update_fail_message">is already in your store list.</string>
    <string name="about_message">This app will help you create and manage your shopping lists, while also helping to make your trips more organized and effective.  ChipsList will help you shop faster and more efficiently.\n\nTo learn about our other apps, please visit our web site:</string>
    <string name="default_help_message">This is the default help message</string>
    <string name="no_stores">No Stores Found</string>
    <string name="no_stores_mess">No stores were found.  Use this screen to add a new store.  </string>
    <string name="no_items">No Items Found</string>
    <string name="no_items_mess">No items were found.  To create a new item or add an existing item to the list, click the green + in the Action Bar.</string>
    <string name="HELP_add_item">Add new items to your shopping list from this screen.\n\nAdd the item\'s name, location, package size, price and the quantity you wish to purchase.  Voice support is provided, click the microphone icon and dictate the information.\n\nAlso, the screen supports horizontal scrolling (if necessary).</string>
    <string name="HELP_add_store">Add a new store from this screen.\n\nYou can enter the store\'s name and the tax rate (as a percent, such as 8.25)</string>
    <string name="HELP_update_store">Delete a store from this screen by tapping the red X button to the right of the store\'s name.\n\nTap on the store\'s name to go to an update screen to rename the store or change the tax rate. </string>
    <string name="HELP_trip_summary">The Trip Summary screen displays details about the cost of this trip to the store.\n\nThe top half of the screen shows totals for all items, and the bottom half is information about the items you\'ve checked off your list.</string>
    <string name="HELP_chipslist">This is ChipsList\'s main screen; from this screen you can select a store by tapping on the store\'s name.  You can also add stores by tapping the green + in the Action Bar.  Update or remove the store by Long Tap on it.</string>
    <string name="HELP_store">This is the shopping list for a particular store - to add additional items to the list, tap the green + in the Action Bar.\n\n(When Available) Tap the phone icon in the Action Bar to send the shopping list via SMS, to someone in your contact list.\n\n Tap the $ icon in the Action Bar to see the Trip Summary Screen\n\nItalics and green text indicate the item has a price and quantity.\n\nTap the item\'s name to update it.\n\nLong Tap the item to delete or do price comparisons.\n\nTap the Options Menu to remove items from the list or set the display sort order.</string>
    <string name="HELP_update_or_delete_store">This screen permits you to update the store name and tax rate.</string>
    <string name="HELP_find_item">Use this screen to select items to move to the current store\'s shopping list.\n\nTapping on the "Add New Item" button will enable you to create a new item.\n\nTapping an item will go to the update screen for the item.\n\nLong Tapping the item will go to the Price Comparison screen.\n\nAfter selecting items, click the "Move Checked" button to move them to the store\'s list.</string>
    <string name="HELP_update_department">Use this screen to specify the order you visit departments in the store.  Enter a number for the department, tap "Save" when you have completed setting the order.\n\nWhile you are on the shopping list page, you can set the department sort order from the Options Menu.</string>
    <string name="HELP_update_item">This screen permits you to change the department, item size, price or quantity.  You can not change the item name.\n\nVoice support is provided, click the microphone icon and dictate the information.</string>

</resources>
