<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow>

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name" />

                <EditText
                    android:id="@+id/item"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:minLines="1"
                    android:scrollbars="vertical"
                    android:width="150sp" />

                <ImageButton
                    android:id="@+id/voice_item"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_btn_speak_now"
                    android:contentDescription="@string/microphone_icon" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <AutoCompleteTextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

                <ImageButton
                    android:id="@+id/voice_location"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_btn_speak_now"
                    android:contentDescription="@string/microphone_icon" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/size_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size" />

                <EditText
                    android:id="@+id/pkg_sz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

                <ImageButton
                    android:id="@+id/voice_size"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_btn_speak_now"
                    android:contentDescription="@string/microphone_icon" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/price"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

                <ImageButton
                    android:id="@+id/voice_price"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_btn_speak_now"
                    android:contentDescription="@string/microphone_icon" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/quantity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/quantity"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

                <ImageButton
                    android:id="@+id/voice_quantity"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:background="@drawable/ic_btn_speak_now"
                    android:contentDescription="@string/microphone_icon" />
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/is_taxed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_taxed" />

                <Button
                    android:id="@+id/save"
                    style="?android:attr/buttonStyleSmall"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35sp"
                    android:layout_marginRight="35sp"
                    android:background="@drawable/gradient_button"
                    android:text="@string/save" />
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

</ScrollView>