<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20px">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Black"
                    android:text="@string/store_name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/Black"
                    android:width="155sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tax_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:text="@string/store_tax"
                    android:textColor="@color/Black"
                    android:lines="3" />

                <EditText
                    android:id="@+id/tax_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Black"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/save"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35sp"
                    android:layout_marginRight="35sp"
                    android:background="@drawable/gradient_button"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/delete"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35sp"
                    android:layout_marginRight="35sp"
                    android:background="@drawable/gradient_button"
                    android:text="@string/delete" />
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

</ScrollView>
