<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TableRow>

            <TextView
                android:id="@+id/title"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name" />

            <EditText
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:width="155sp"
                android:inputType="textCapWords" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tax_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/store_tax"
                android:lines="3" />

            <EditText
                android:id="@+id/tax"
                android:layout_width="match_parent"
                android:textColor="@color/Black"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/save"
                style="?android:attr/buttonStyleSmall"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_button"
                android:text="@string/save" />
        </TableRow>
    </TableLayout>

</ScrollView>
