<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/spacer0"
        android:layout_width="fill_parent"
        android:layout_height="12sp" />

    <Button
        android:id="@+id/move"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/spacer0"
        android:background="@drawable/gradient_button"
        android:text="@string/move_checked" />

    <Button
        android:id="@+id/add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/spacer0"
        android:background="@drawable/gradient_button"
        android:text="@string/add_new_item" />

    <TextView
        android:id="@+id/spacer"
        android:layout_width="fill_parent"
        android:layout_height="12sp"
        android:layout_below="@id/add" />

    <EditText
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer"
        android:hint="@string/enter_description"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/num_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer"
        android:layout_toRightOf="@id/search" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="true" >
    </ListView>

</RelativeLayout>